Fix the app wrap and padding in body to allow us to see the signup screen at a 100%

--- a/app/javascript/components/App.scss
+++ b/app/javascript/components/App.scss
@@ -1,5 +1,5 @@
 body, html{
-  padding: 0;
+  padding: 20px;
   margin: 0;
   background-color: rgb(0, 6, 90);
 }
@@ -12,7 +12,7 @@ body, html{
   position: fixed;
   width: 65vw;
   min-height: 80vh;
-  top: 60%;
+  top: 50%;
   transform: translate(-50%, -50%);
   left: 50%;
   background-color: white;
